--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ crc = "1.8.1"
 lru = "0.5.1"
 scan_fmt = "0.2.5"
 
+[dev-dependencies]
+hex = "0.4.2"
+
 [lib]
 name = "growthring"
 path = "src/lib.rs"
