--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ scan_fmt = "0.2.5"
 regex = "1"
 async-trait = "0.1"
 futures = "0.3"
+libaio-futures = "0.1.1"
+nix = "0.17.0"
+libc = "0.2.71"
 
 [dev-dependencies]
 hex = "0.4.2"
