--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "growth-ring"
 version = "0.1.0"
 authors = ["Determinant <tederminant@gmail.com>"]
 edition = "2018"
+homepage = "https://github.com/Determinant/growth-ring"
+keywords = ["wal", "db", "futures"]
+license = "MIT"
+description = "Simple and modular write-ahead-logging implementation."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
