--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "growth-ring"
-version = "0.1.9"
+version = "0.1.10"
 authors = ["Determinant <tederminant@gmail.com>"]
 edition = "2018"
 homepage = "https://github.com/Determinant/growth-ring"
@@ -17,7 +17,7 @@ scan_fmt = "0.2.5"
 regex = "1.4.2"
 async-trait = "0.1.42"
 futures = "0.3.8"
-libaio-futures = "0.1.8"
+libaio-futures = "0.1.9"
 nix = "0.19.1"
 libc = "0.2.81"
 
@@ -25,6 +25,9 @@ libc = "0.2.81"
 hex = "0.4.2"
 rand = "0.8.0"
 indexmap = "1.6.1"
+
+[patch.crates-io]
+#libaio-futures = { path = "/home/ymf/work/current/libaio-futures" }
 
 [lib]
 name = "growthring"
