upgrade deps; avoid the use of RawFd; v0.3.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "growth-ring"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Determinant <tederminant@gmail.com>"]
 edition = "2018"
 homepage = "https://github.com/Determinant/growth-ring"
@@ -11,20 +11,20 @@ description = "Simple and modular write-ahead-logging implementation."
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crc = "3.0.0"
-lru = "0.8.0"
+crc = "3.0.1"
+lru = "0.12.2"
 scan_fmt = "0.2.6"
-regex = "1.6.0"
-async-trait = "0.1.57"
-futures = "0.3.24"
+regex = "1.10.3"
+async-trait = "0.1.77"
+futures = "0.3.30"
 libaio-futures = "0.2.3"
-nix = "0.25.0"
-libc = "0.2.133"
+nix = { version = "0.27.1", features = ["dir"] }
+libc = "0.2.153"
 
 [dev-dependencies]
 hex = "0.4.3"
 rand = "0.8.5"
-indexmap = "1.9.1"
+indexmap = "2.2.2"
 
 [patch.crates-io]
 #libaio-futures = { path = "/home/ymf/work/current/libaio-futures" }
